--- a/horloge.html
+++ b/horloge.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Horloge</title>
 		<link rel="stylesheet" href="css/base.css">
 	</head>
 	<body>
@@ -21,7 +21,7 @@
 			<section id="alarme">
 				<h1></h1>
 				<hr/>
-				<button id="btn_ajouterAlarme" onclick="setAlarme()">Ajouter une alarme</button>
+				<button id="btn_ajouterAlarme">Ajouter une alarme</button>
 				dans
 				<select id="select_alarmeHeures">
 					<option value="0">0</option>
@@ -179,7 +179,7 @@
 					<option value="59">59</option>
 				</select>
 				secondes<br><br>
-				<button id="btn_arreterAlarme" onclick="Arreter()" disabled>Arrêter l'alarme</button>
+				<button id="btn_arreterAlarme" disabled>Arrêter l'alarme</button>
 
 				
 			</section>
@@ -187,6 +187,6 @@
 			
 		</div>
 
-		<script src="js/Horloge.js"></script>
+		<script src="js/horloge.js"></script>
 	</body>
 </html>
